--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,42 +1,113 @@
+/* ====== Default css : start ====== */
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary-color: #C32D1C;
+  --secondary-color: #090909;
+  --light-color: #FFFFFF;
+  --dark-color: #000000;
+  --border-color: #E5E5E5;
+  --shadow-color: rgba(0, 0, 0, 0.1);
+  --font-family-primary: "futura-pt", sans-serif;
+  --font-family-secondary: "ivyora-display", serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+*,
+*::after,
+*::before { 
+  margin: 0; 
+  padding: 0; 
+  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box; 
+  letter-spacing: normal; 
 }
 
 html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+body { 
+  min-height: 100%; 
+  margin: 0; 
+  padding: 0; 
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body { 
+  position: relative; 
+  font-family: "futura-pt"; 
+  font-weight: normal; 
+  font-size: 16px; 
+  line-height: normal; 
+  background: #090909; 
+  color: #FFFFFF; 
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+body.open-nav { overflow: hidden; }
+body.open_menu { overflow: hidden; }
+
+li, ul, ol { list-style: none; margin: 0; padding: 0; }
+
+a { text-decoration: none; border: 0; outline: none !important; }
+a,
+a:hover { color: inherit; }
+a, button, input[type=submit] {
+	outline:none;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+a:hover,
+a:focus { text-decoration: none; outline: none; }
+
+:focus { outline: none; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { margin: 0; padding: 0; }
+
+.btnbox { display: flex; }
+
+.primary_btn { display: flex; justify-content: center; align-items: center; height: 48px; padding: 0 22px; border: 1px solid #FFFFFF; font-family: "futura-pt"; font-size: 18px; font-weight: 400; letter-spacing: 0.05em; line-height: 1.28; color: #FFFFFF; transition: all 0.3s ease-in-out; text-transform: uppercase; }
+.primary_btn:hover { background: #FFFFFF; color: #090909; }
+
+h1 { font-family: "ivyora-display"; font-style: italic; font-size: 82px; line-height: 1.20; color: #FFFFFF; font-weight: 400; letter-spacing: 0.05em; }
+h2 { font-family: "ivyora-display"; font-style: italic; font-size: 45px; line-height: 1.2; color: #C32D1C; font-weight: 400; letter-spacing: 0.05em; }
+h3 { font-family: "futura-pt"; font-size: 22px; line-height: 1.31; text-transform: uppercase; color: #FFFFFF; font-weight: 500; letter-spacing: 0.05em; }
+
+.main_wrapper { position: relative; width: 100%; overflow: hidden; }
+
+.container { padding: 0 15px; width: 100%; margin: 0 auto; }
+
+@media (min-width: 375px) {
+	.container {
+		max-width: 100%;
+	}
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@media (min-width: 768px) {
+	.container {
+		max-width: 750px;
+	}
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@media (min-width: 992px) {
+	.container {
+		max-width: 970px;
+	}
 }
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 1170px;
+	}
+}
+
+@media (min-width: 1400px) {
+	.container {
+		max-width: 1325px;
+	}
+}
+
+/* ====== Default css : end ====== */
