start the project

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,8 +1,35 @@
 @font-face {
-    font-family: 'KyivType Sans Medium';
-    src: url('/public/fonts/KyivTypeSans-Medium-.woff2') format('woff2'),
-        url('/public/fonts/KyivTypeSans-Medium-.woff') format('woff');
+    font-family: 'Urbanist';
+    src: url('../../public/fonts/Urbanist-Regular.woff2') format('woff2'),
+        url('../../public/fonts/Urbanist-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Urbanist';
+    src: url('../../public/fonts/Urbanist-Medium.woff2') format('woff2'),
+        url('../../public/fonts/Urbanist-Medium.woff') format('woff');
     font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Urbanist';
+    src: url('../../public/fonts/Urbanist-SemiBold.woff2') format('woff2'),
+        url('../../public/fonts/Urbanist-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Urbanist';
+    src: url('../../public/fonts/Urbanist-Bold.woff2') format('woff2'),
+        url('../../public/fonts/Urbanist-Bold.woff') format('woff');
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
